login modal closing is done

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 		<link href="css/library.css" rel="stylesheet" />
 		<link href="css/spotlight.css" rel="stylesheet" />
 		<link href="css/footer.css" rel="stylesheet" />
+		<link href="css/responsive.css" rel="stylesheet" />
 	</head>
 	<body>
 		<section class="top__section">
@@ -57,6 +58,8 @@
 		</section>
 
 		<section class="modal__container">
+<div class="modal__overlay"></div>
+
 			<div class="login__modal">
 				<div class="modal__header">
 					<div class="close__icon"></div>
